RB-1222B: Fix layout issues

--- a/source/styles/scaffold.less
+++ b/source/styles/scaffold.less
@@ -1,9 +1,7 @@
 .innerNav {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 82px;
   overflow-y: auto;
+  flex: 1 1 auto;
+  min-height: 10px;
 }
 
 .agent-wrapper {
@@ -22,8 +20,7 @@
         }
 
         .agent-footer {
-            text-align: right;
-          position: absolute;
+          text-align: right;
           bottom: 0px;
           left: 0;
           right: 0;
